model development update

--- a/notebooks/02_model_development_old.ipynb
+++ b/notebooks/02_model_development_old.ipynb
@@ -89,30 +89,39 @@
     "        \"\"\"Generate ensemble predictions by combining multiple models\"\"\"\n",
     "        \n",
     "        all_predictions = []\n",
+    "        num_steps = int(time_horizon / time_increment)\n",
     "        \n",
-    "        for i in range(num_simulations):\n",
+    "        for sim in range(num_simulations):\n",
     "            simulation_predictions = []\n",
-    "            current_time = start_time\n",
     "            \n",
-    "            for _ in range(time_horizon // time_increment):\n",
-    "                # Get predictions from each model\n",
-    "                model_predictions = []\n",
-    "                for model_name, model in self.models.items():\n",
-    "                    pred = model.predict(start_price, current_time, \n",
-    "                                      time_increment, time_increment, 1)\n",
-    "                    if pred and pred[0]:\n",
-    "                        model_predictions.append(pred[0][0]['price'])\n",
+    "            # Generate predictions for each time step (including start time)\n",
+    "            for step in range(num_steps + 1):  # +1 to include start time, matching baseline models\n",
+    "                current_time = start_time + timedelta(seconds=step * time_increment)\n",
     "                \n",
-    "                if model_predictions:\n",
-    "                    # Weighted average of predictions\n",
-    "                    weighted_price = sum(p * w for p, w in zip(model_predictions, self.weights[:len(model_predictions)]))\n",
-    "                    \n",
+    "                if step == 0:\n",
+    "                    # Start time - use the actual start price\n",
     "                    simulation_predictions.append({\n",
     "                        'time': current_time.isoformat(),\n",
-    "                        'price': max(0.01, weighted_price)  # Ensure positive price\n",
+    "                        'price': start_price\n",
     "                    })\n",
-    "                \n",
-    "                current_time += timedelta(seconds=time_increment)\n",
+    "                else:\n",
+    "                    # Future time steps - get predictions from each model\n",
+    "                    model_predictions = []\n",
+    "                    for model_name, model in self.models.items():\n",
+    "                        # Get prediction for this specific time step\n",
+    "                        pred = model.predict(start_price, start_time, \n",
+    "                                          time_increment, time_horizon, 1)\n",
+    "                        if pred and pred[0] and len(pred[0]) > step:\n",
+    "                            model_predictions.append(pred[0][step]['price'])\n",
+    "                    \n",
+    "                    if model_predictions:\n",
+    "                        # Weighted average of predictions\n",
+    "                        weighted_price = sum(p * w for p, w in zip(model_predictions, self.weights[:len(model_predictions)]))\n",
+    "                        \n",
+    "                        simulation_predictions.append({\n",
+    "                            'time': current_time.isoformat(),\n",
+    "                            'price': max(0.01, weighted_price)  # Ensure positive price\n",
+    "                        })\n",
     "            \n",
     "            if simulation_predictions:\n",
     "                all_predictions.append(simulation_predictions)\n",
@@ -138,7 +147,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# Test the ensemble model\n",
+    "print(\"🧪 Testing Ensemble Model\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Create test models\n",
+    "test_models = {\n",
+    "    'RW': RandomWalkModel(volatility=0.02),\n",
+    "    'GBM': GeometricBrownianModel(drift=0.001, volatility=0.02),\n",
+    "    'MR': MeanReversionModel(mean_price=50000.0, reversion_strength=0.1, volatility=0.02)\n",
+    "}\n",
+    "\n",
+    "# Create ensemble model\n",
+    "ensemble = EnsembleModel(test_models, weights=[0.33, 0.34, 0.33])\n",
+    "\n",
+    "# Test parameters\n",
+    "start_price = 50000.0\n",
+    "start_time = datetime.now()\n",
+    "time_increment = 3600  # 1 hour\n",
+    "time_horizon = 86400   # 24 hours\n",
+    "num_simulations = 5    # Small number for testing\n",
+    "\n",
+    "# Test ensemble model\n",
+    "ensemble_predictions = ensemble.predict(start_price, start_time, time_increment, time_horizon, num_simulations)\n",
+    "\n",
+    "if ensemble_predictions:\n",
+    "    first_sim_length = len(ensemble_predictions[0])\n",
+    "    expected_length = (time_horizon // time_increment) + 1  # +1 for start time\n",
+    "    \n",
+    "    print(f\"✅ Generated {len(ensemble_predictions)} simulations\")\n",
+    "    print(f\"📏 Simulation length: {first_sim_length} time points (expected: {expected_length})\")\n",
+    "    \n",
+    "    if first_sim_length == expected_length:\n",
+    "        print(\"✅ Ensemble model working correctly!\")\n",
+    "    else:\n",
+    "        print(f\"❌ Length mismatch: got {first_sim_length}, expected {expected_length}\")\n",
+    "        \n",
+    "    # Show first few predictions\n",
+    "    print(f\"\\n📊 First 3 predictions:\")\n",
+    "    for i, pred in enumerate(ensemble_predictions[0][:3]):\n",
+    "        print(f\"   {i+1}. Time: {pred['time']}, Price: {pred['price']:.2f}\")\n",
+    "        \n",
+    "else:\n",
+    "    print(\"❌ No predictions generated\")\n",
+    "\n",
+    "print(f\"\\n🎯 Ensemble model test completed!\")\n"
    ]
   },
   {
