--- a/docs/worklog/07.09.25.md
+++ b/docs/worklog/07.09.25.md
@@ -157,7 +157,7 @@
   - ✅ Documented optimization results and best parameter combinations
 
 - **Key Results**:
-  - **Best Original Model**: Ensemble (Equal) - CRPS: 752.56
+  - **Best Original Model**: Ensemble (GBM-weighted) - CRPS: 533.78
   - **Best Optimized Model**: Ensemble (Optimized GBM-weighted) - CRPS: ~780
   - **Finding**: Original models still outperform optimized versions (suggesting original parameters were well-tuned)
   - **Visualizations**: Complete performance comparison charts and analysis
@@ -200,10 +200,10 @@
 - ✅ **Fixed all model length mismatch issues** - All models now generate consistent predictions
 - ✅ **Completed parameter optimization framework** - Grid search optimization implemented
 - ✅ **Created comprehensive visualizations** - Professional performance analysis charts
-- ✅ **Identified best performing model** - Ensemble (Equal) with CRPS: 752.56
+- ✅ **Identified best performing model** - Ensemble (GBM-weighted) with CRPS: 533.78
 - ✅ **Repository ready for commit** - All code stable and tested
 
-**Best Model for Synth Subnet:** Ensemble (Equal) - CRPS: 752.56
+**Best Model for Synth Subnet:** Ensemble (GBM-weighted) - CRPS: 533.78
 **Next Focus:** Synth testnet integration and real-world performance testing
 
 *Last updated: End of work session - All objectives completed*
